--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,6 @@
         "src"
     ],
         "bookmarks.navigateThroughAllFiles": false,
-        "python.testing.autoTestDiscoverOnSaveEnabled": true,
+        // "python.testing.autoTestDiscoverOnSaveEnabled": true,
         
 }
